--- a/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
+++ b/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
@@ -51,7 +51,7 @@
                width: 16,
                height: 16) %>
     </span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only"><%= Spree.t(:previous) %></span>
   </a>
   <a
     class="d-none d-sm-flex order-2 justify-content-center w-100 product-thumbnails-carousel-next"
@@ -65,6 +65,6 @@
                width: 16,
                height: 16) %>
     </span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only"><%= Spree.t(:next) %></span>
   </a>
 </div>
