--- a/frontend/app/views/spree/home/_carousel.html.erb
+++ b/frontend/app/views/spree/home/_carousel.html.erb
@@ -28,7 +28,7 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only"><%= Spree.t(:previous) %></span>
   </a>
   <a
     class="d-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
@@ -42,7 +42,7 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only"><%= Spree.t(:next) %></span>
   </a>
 </div>
 
@@ -64,7 +64,7 @@
                        height: 20)
               %>
             </span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only"><%= Spree.t(:previous) %></span>
           </a>
 
           <div class="row">
@@ -90,7 +90,7 @@
                        height: 20)
               %>
             </span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only"><%= Spree.t(:next) %></span>
           </a>
         </div>
       </div>
