--- a/frontend/app/views/spree/products/_carousel.html.erb
+++ b/frontend/app/views/spree/products/_carousel.html.erb
@@ -26,7 +26,7 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only"><%= Spree.t(:previous) %></span>
   </a>
   <a
     class="d-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
@@ -40,7 +40,7 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only"><%= Spree.t(:next) %></span>
   </a>
 </div>
 
@@ -72,7 +72,7 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only"><%= Spree.t(:previous) %></span>
   </a>
   <a
     class="d-md-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
@@ -86,6 +86,6 @@
                width: 20,
                height: 20) %>
     </span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only"><%= Spree.t(:next) %></span>
   </a>
 </div>
