--- a/frontend/app/views/spree/shared/carousel/_single.html.erb
+++ b/frontend/app/views/spree/shared/carousel/_single.html.erb
@@ -21,7 +21,7 @@
                 width: 20,
                 height: 20) %>
       </span>
-      <span class="sr-only">Previous</span>
+      <span class="sr-only"><%= Spree.t(:previous) %></span>
     </a>
 
     <a
@@ -36,7 +36,7 @@
                 width: 20,
                 height: 20) %>
       </span>
-      <span class="sr-only">Next</span>
+      <span class="sr-only"><%= Spree.t(:next) %></span>
     </a>
   <% end %>
 
