--- a/frontend/app/views/spree/orders/_line_item.html.erb
+++ b/frontend/app/views/spree/orders/_line_item.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </div>
     <div class="d-table-cell shopping-cart-item-description" data-hook="cart_item_description">
-      <h4 class="item-title"><%= link_to line_item.name, product_path(variant.product) %></h4>
+      <h4 class="item-title"><%= link_to line_item.name, spree.product_path(variant.product) %></h4>
       <% if line_item.insufficient_stock? %>
         <span class="out-of-stock">
           <%= Spree.t(:out_of_stock) %>&nbsp;&nbsp;<br />
