--- a/frontend/app/views/spree/shared/_footer.html.erb
+++ b/frontend/app/views/spree/shared/_footer.html.erb
@@ -58,22 +58,22 @@
           <%= I18n.t('navigation.categories.women') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.dresses'), nested_taxons_path('women/dresses') %>
+          <%= link_to I18n.t('navigation.subcategories.dresses'), spree.nested_taxons_path('women/dresses') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.shirts_and_blouses'), nested_taxons_path('women/shirts-and-blouses') %>
+          <%= link_to I18n.t('navigation.subcategories.shirts_and_blouses'), spree.nested_taxons_path('women/shirts-and-blouses') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.t_shirts_and_tops'), nested_taxons_path('women/tops-and-t-shirts') %>
+          <%= link_to I18n.t('navigation.subcategories.t_shirts_and_tops'), spree.nested_taxons_path('women/tops-and-t-shirts') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.sweaters'), nested_taxons_path('women/sweaters') %>
+          <%= link_to I18n.t('navigation.subcategories.sweaters'), spree.nested_taxons_path('women/sweaters') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.skirts'), nested_taxons_path('women/skirts') %>
+          <%= link_to I18n.t('navigation.subcategories.skirts'), spree.nested_taxons_path('women/skirts') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.jackets_and_coats'), nested_taxons_path('women/jackets-and-coats') %>
+          <%= link_to I18n.t('navigation.subcategories.jackets_and_coats'), spree.nested_taxons_path('women/jackets-and-coats') %>
         </div>
       </div>
       <div class="col-3">
@@ -81,16 +81,16 @@
           <%= I18n.t('navigation.categories.men') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.shirts'), nested_taxons_path('men/shirts') %>
+          <%= link_to I18n.t('navigation.subcategories.shirts'), spree.nested_taxons_path('men/shirts') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.t_shirts'), nested_taxons_path('men/t-shirts') %>
+          <%= link_to I18n.t('navigation.subcategories.t_shirts'), spree.nested_taxons_path('men/t-shirts') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.sweaters'), nested_taxons_path('men/sweaters') %>
+          <%= link_to I18n.t('navigation.subcategories.sweaters'), spree.nested_taxons_path('men/sweaters') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.jackets_and_coats'), nested_taxons_path('men/jackets-and-coats') %>
+          <%= link_to I18n.t('navigation.subcategories.jackets_and_coats'), spree.nested_taxons_path('men/jackets-and-coats') %>
         </div>
       </div>
       <div class="col-3">
@@ -98,13 +98,13 @@
           <%= I18n.t('navigation.categories.sportswear') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.tops'), nested_taxons_path('sportswear/tops') %>
+          <%= link_to I18n.t('navigation.subcategories.tops'), spree.nested_taxons_path('sportswear/tops') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.pants'), nested_taxons_path('sportswear/pants') %>
+          <%= link_to I18n.t('navigation.subcategories.pants'), spree.nested_taxons_path('sportswear/pants') %>
         </div>
         <div class="pt-2">
-          <%= link_to I18n.t('navigation.subcategories.sweatshirts'), nested_taxons_path('sportswear/sweatshirts') %>
+          <%= link_to I18n.t('navigation.subcategories.sweatshirts'), spree.nested_taxons_path('sportswear/sweatshirts') %>
         </div>
       </div>
       <div class="col-3">
