--- a/frontend/app/views/spree/home/_carousel.html.erb
+++ b/frontend/app/views/spree/home/_carousel.html.erb
@@ -6,8 +6,42 @@
           <div class="row">
             <% sliced_items.each do |item| %>
               <div class="col-6">
+                <% if item == sliced_items.first %>
+                  <a
+                    class="d-flex position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--previous"
+                    href="#<%= id %>-mobile"
+                    role="button"
+                    data-slide="prev"
+                  >
+                    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
+                      <%= icon(name: 'arrow-right',
+                               classes: 'spree-icon-arrow spree-icon-arrow-left',
+                               width: 20,
+                               height: 20) %>
+                    </span>
+                    <span class="sr-only"><%= Spree.t(:previous) %></span>
+                  </a>
+                <% end %>
+
                 <% cache(item) do %>
                   <%= render 'spree/shared/carousel_product', product: item, image_class: 'w-100' %>
+                <% end %>
+
+                <% if item == sliced_items.last %>
+                  <a
+                    class="d-flex position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
+                    href="#<%= id %>-mobile"
+                    role="button"
+                    data-slide="next"
+                  >
+                    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
+                      <%= icon(name: 'arrow-right',
+                               classes: 'spree-icon-arrow spree-icon-arrow-right',
+                               width: 20,
+                               height: 20) %>
+                    </span>
+                    <span class="sr-only"><%= Spree.t(:next) %></span>
+                  </a>
                 <% end %>
               </div>
             <% end %>
@@ -16,34 +50,6 @@
       </div>
     <% end %>
   </div>
-  <a
-    class="d-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--previous"
-    href="#<%= id %>-mobile"
-    role="button"
-    data-slide="prev"
-  >
-    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
-      <%= icon(name: 'arrow-right',
-               classes: 'spree-icon-arrow spree-icon-arrow-left',
-               width: 20,
-               height: 20) %>
-    </span>
-    <span class="sr-only"><%= Spree.t(:previous) %></span>
-  </a>
-  <a
-    class="d-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
-    href="#<%= id %>-mobile"
-    role="button"
-    data-slide="next"
-  >
-    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
-      <%= icon(name: 'arrow-right',
-               classes: 'spree-icon-arrow spree-icon-arrow-right',
-               width: 20,
-               height: 20) %>
-    </span>
-    <span class="sr-only"><%= Spree.t(:next) %></span>
-  </a>
 </div>
 
 <div id="<%= id %>-desktop" class="carousel slide d-none d-md-block homepage-carousel" data-interval="false">
@@ -51,47 +57,52 @@
     <% products.each_slice(4).with_index do |sliced_items, index| %>
       <div class="carousel-item <%= 'active' if index == 0 %>">
         <div class="container position-relative">
-          <a
-            class="d-md-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--previous"
-            href="#<%= id %>-desktop"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
-              <%= icon(name: 'arrow-right',
-                       classes: 'spree-icon-arrow spree-icon-arrow-left',
-                       width: 20,
-                       height: 20)
-              %>
-            </span>
-            <span class="sr-only"><%= Spree.t(:previous) %></span>
-          </a>
 
           <div class="row">
             <% sliced_items.each do |item| %>
               <div class="col-3">
+                <% if item == sliced_items.first %>
+                  <a
+                    class="d-md-flex position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--previous"
+                    href="#<%= id %>-desktop"
+                    role="button"
+                    data-slide="prev"
+                  >
+                    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
+                      <%= icon(name: 'arrow-right',
+                               classes: 'spree-icon-arrow spree-icon-arrow-left',
+                               width: 20,
+                               height: 20)
+                      %>
+                    </span>
+                    <span class="sr-only"><%= Spree.t(:previous) %></span>
+                  </a>
+                <% end %>
+
                 <% cache(item) do %>
                   <%= render 'spree/shared/carousel_product', product: item, image_class: 'w-100' %>
+                <% end %>
+
+                <% if item == sliced_items.last %>
+                  <a
+                    class="d-md-flex position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
+                    href="#<%= id %>-desktop"
+                    role="button"
+                    data-slide="next"
+                  >
+                    <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
+                      <%= icon(name: 'arrow-right',
+                               classes: 'spree-icon-arrow spree-icon-arrow-right',
+                               width: 20,
+                               height: 20)
+                      %>
+                    </span>
+                    <span class="sr-only"><%= Spree.t(:next) %></span>
+                  </a>
                 <% end %>
               </div>
             <% end %>
           </div>
-
-          <a
-            class="d-md-flex h-100 position-absolute justify-content-center align-items-center carousel-icon-control carousel-icon-control--next"
-            href="#<%= id %>-desktop"
-            role="button"
-            data-slide="next"
-          >
-            <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded" aria-hidden="true">
-              <%= icon(name: 'arrow-right',
-                       classes: 'spree-icon-arrow spree-icon-arrow-right',
-                       width: 20,
-                       height: 20)
-              %>
-            </span>
-            <span class="sr-only"><%= Spree.t(:next) %></span>
-          </a>
         </div>
       </div>
     <% end %>
