--- a/frontend/app/views/spree/checkout/registration.html.erb
+++ b/frontend/app/views/spree/checkout/registration.html.erb
@@ -1,18 +1,29 @@
 <%= render partial: 'spree/shared/error_messages', locals: { target: @user } %>
 <div class="checkout-registration container">
-  <%= render partial: 'spree/shared/login' %>
-  <div class="checkout-registration-styled-or">
-    <%= Spree.t(:or) %>
-  </div>
-  <% if Spree::Config[:allow_guest_checkout] %>
-    <% path = spree.respond_to?(:update_checkout_registration_path) ? spree.update_checkout_registration_path : spree.signup_path %>
+  <div class="row col-xs-12 col-lg-11 mx-auto">
+    <div class="col-xs-12 col-lg-6">
+      <%= render partial: 'spree/shared/login' %>
+    </div>
+    <div class="col-xs-12 col-lg-6">
+      <div class="col-lg-11 mx-auto pt-lg-2">
+        <h3 class="spree-header header-sm spree-mt-large mb-3 mb-sm-4 mb-xl-4"><%= Spree.t('dont_have_account') %></h3>
+        <%= link_to Spree.t(:sign_up), spree.signup_path, class: 'btn btn-block btn-outline-primary spree-btn' %>
+        <div class="checkout-registration-styled-or">
+          <%= Spree.t(:or) %>
+        </div>
+        <% if Spree::Config[:allow_guest_checkout] %>
+          <% path = spree.respond_to?(:update_checkout_registration_path) ? spree.update_checkout_registration_path : spree.signup_path %>
 
-    <%= form_for @order, url: path, method: :put, html: { id: 'checkout_form_registration' } do |f| %>
-      <div class="form-group">
-        <%= f.label :email, Spree.t(:email), class: 'spree-flat-label' %>
-        <%= f.email_field :email, class: 'spree-flat-input', value: params.dig(:spree_user, :email), tabindex: 1, autofocus: true %>
+          <%= form_for @order, url: path, method: :put, html: { id: 'checkout_form_registration' } do |f| %>
+            <div class="form-group">
+              <p class="form-group checkout-content-inner-field">
+                <%= f.email_field :email, class: 'spree-flat-input', placeholder: Spree.t(:email), autofocus: true %>
+              </p>
+            </div>
+            <%= f.submit Spree.t(:continue_as_guest), class: 'btn btn-block btn-outline-primary spree-btn', tabindex: 4 %>
+          <% end %>
+        <% end %>
       </div>
-      <%= f.submit Spree.t(:continue_as_guest), class: 'btn btn-block btn-outline-primary spree-btn', tabindex: 4 %>
-    <% end %>
-  <% end %>
+    </div>
+  </div>
 </div>
