--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -35,8 +35,8 @@
       <div class="col-md-12 col-lg-9" data-hook="homepage_products">
         <div class="row">
           <% cache(params.permit!.merge(current_currency: current_currency)) do %>
-            <% @products.each do |product| %>
-              <div id="product_<%= product.id %>" class="col-sm-4 col-6 mb-3 mb-md-4 pr-0 pl-md-4 pl-sm-4">
+            <% @products.each_with_index do |product, index| %>
+              <div id="product_<%= product.id %>" class="col-sm-4 col-6 mb-3 mb-md-4 pr-sm-0 pr-md-0 pl-md-4 pl-sm-4 <%= index&1 == 0 ? 'pl-0 pr-2' : 'pr-0 pl-2' %>">
                 <%= render 'spree/shared/product', product: product, image_class: 'product-component-plp-image' %>
               </div>
             <% end %>
