--- a/frontend/app/views/spree/shared/_color_select.html.erb
+++ b/frontend/app/views/spree/shared/_color_select.html.erb
@@ -1,4 +1,4 @@
-<svg class="color-select" height="32" viewBox="0 0 32 32" width="32" xmlns="http://www.w3.org/2000/svg">
+<svg class="color-select" height="<%= height %>" viewBox="0 0 32 32" width="<%= width %>" xmlns="http://www.w3.org/2000/svg">
   <g fill="none" fill-rule="evenodd">
     <circle class="color-select-border" cx="16" cy="16" r="15" stroke="<%= selected ? '#000000' : '#e4e5e6'%>" stroke-width="2"/>
     <g transform="translate(2 2)">
