Reverts all changes and add small fix for checkout confirm step

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -27,18 +27,6 @@
     }
   }
 
-  &-option-value {
-    @include media-breakpoint-up(lg) {
-      font-size: 14px;
-      margin-bottom: 2px;
-      text-transform: uppercase;
-    }
-
-    @include media-breakpoint-down(md) {
-      display: none;
-    }
-  }
-
   &-product {
     display: flex;
     border-top: 1px solid theme-color('borders');
@@ -78,13 +66,9 @@
         grid-column: span 4;
         display: grid;
         grid-template-columns: 1fr $last_3_table_cols;
+        grid-auto-rows: 250px;
         margin: 0;
-      }
-    }
-
-    &-name {
-      @include media-breakpoint-up(lg) {
-        margin-bottom: 12px;
+        align-items: center;
       }
     }
 
@@ -98,11 +82,6 @@
       &-qty {
         flex: 1;
         display: flex;
-      }
-    }
-
-    @media (min-width: 576px) and (max-width: 991px) {
-      &-qty {
         align-items: flex-end;
       }
     }
