--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -81,6 +81,33 @@
   </div>
 </div>
 
+  <br />
+
+<div class="card">
+  <div class="card-header">
+    <h1 class="card-title mb-0 h5">
+      Social
+    </h1>
+  </div>
+  <div class="card-body">
+    <%= f.field_container :facebook, class: ['form-group'] do %>
+      <%= f.label :facebook, Spree.t(:facebook)  %>
+      <%= f.text_field :facebook, class: 'form-control' %>
+      <%= f.error_message_on :facebook %>
+    <% end %>
+    <%= f.field_container :twitter, class: ['form-group'] do %>
+      <%= f.label :twitter, Spree.t(:twitter)  %>
+      <%= f.text_field :twitter, class: 'form-control' %>
+      <%= f.error_message_on :twitter %>
+    <% end %>
+    <%= f.field_container :instagram, class: ['form-group'] do %>
+      <%= f.label :instagram, Spree.t(:instagram)  %>
+      <%= f.text_field :instagram, class: 'form-control' %>
+      <%= f.error_message_on :instagram %>
+    <% end %>
+  </div>
+</div>
+
 <br />
 
 <script>
