Truncate carousel product name

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/product.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/product.scss
@@ -5,15 +5,16 @@
     font-weight: 500;
     color: theme-color('dark');
     font-size: $font-size;
-    height: 1.5 * $font-size;
     line-height: $font-size;
     margin-top: calc-spacer(2);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     @include media-breakpoint-up(md) {
       $font-size: font-px-to-rem(18px);
 
       font-size: $font-size;
-      height: 1.5 * $font-size;
       line-height: $font-size;
       margin-top: calc-spacer(3);
     }
