--- a/frontend/app/views/spree/shared/_translations.html.erb
+++ b/frontend/app/views/spree/shared/_translations.html.erb
@@ -4,7 +4,8 @@
       {
         coupon_code_applied: Spree.t(:coupon_code_applied),
         coupon_code_removed: Spree.t(:coupon_code_removed),
-        coupon_code_error_icon: image_path('error.svg')
+        coupon_code_error_icon: image_path('error.svg'),
+        state: Spree.t(:state)
       }.to_json
     %>
   });
