[SD-659] Fixes products list alignment on checkout confirm and order summary

--- a/frontend/app/views/spree/orders/show.html.erb
+++ b/frontend/app/views/spree/orders/show.html.erb
@@ -32,9 +32,9 @@
       </dd>
     </div>
   </dl>
-  <div class="order-show-line-items d-flex flex-column align-items-center w-100">
+  <div class="order-show-line-items d-flex flex-column align-items-center">
     <% @order.line_items.each do |item| %>
-      <div class="order-show-line-items-line-item d-flex">
+      <div class="order-show-line-items-line-item d-flex w-100">
         <% if item.variant.images.length == 0 %>
           <%= link_to product_image(item.product), item.product %>
         <% else %>
