--- a/frontend/app/views/spree/users/show.html.erb
+++ b/frontend/app/views/spree/users/show.html.erb
@@ -10,6 +10,12 @@
         <% end %>
       </dt>
       <dd class="account-page-user-info-item-definition"><%= @user.email %></dd>
+
+      <div class="d-lg-inline-block account-page-user-info-item-store-credits">
+        <p class="my-0 text-uppercase text-center">
+          <%= Spree.t(:store_credit_name) %>: <b class="account-page-user-info-item-store-credits-amount"><%= Spree::Money.new(@user.total_available_store_credit).to_s.gsub('.00', '') %></b>
+        </p>
+      </div>
     </div>
     <div class="col-xs-12 col-lg-8 mt-sm-5 mt-lg-0">
       <%= link_to Spree.t(:add_new_address), spree.new_address_path, class: 'account-page-new-address-link', method: :get %>
