--- a/frontend/app/views/spree/shared/_translations.html.erb
+++ b/frontend/app/views/spree/shared/_translations.html.erb
@@ -1,10 +1,11 @@
 <script>
-  window.addEventListener('turbolinks:load', function() {
+  window.addEventListener('DOMContentLoaded', function() {
     Spree.translations = <%==
       {
         coupon_code_applied: Spree.t(:coupon_code_applied),
         coupon_code_removed: Spree.t(:coupon_code_removed),
-        coupon_code_error_icon: image_path('error.svg')
+        coupon_code_error_icon: image_path('error.svg'),
+        country_state: Spree.t('state')
       }.to_json
     %>
   });
