--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -486,7 +486,8 @@
 
       @include media-breakpoint-up(lg) {
         padding: 0;
-        min-width: 380px;
+        max-width: 380px;
+        align-self: flex-end;
       }
     }
 
